--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,21 @@
 [package]
-name = "bevy_status_bars_2d"
+name = "bevy_simple_stat_bars"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+keywords = ["bevy", "gamedev", "graphics", "2d", "sprites"]
+categories = ["game-development"]
+repository = "https://github.com/ickshonpe/bevy_simple_stat_bars"
+description = "draw stat bars that follow sprites"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-bevy = "0.6"
+[dependencies.bevy]
+version = "0.6"
+default-features = false
+features = ["render"]
 
 [dependencies.copyless]
 version = "0.1.5"
+
+[dev-dependencies.bevy]
+version = "0.6"
+default-features = true
